some gd32f350 sources

--- a/source/vsf_private/CMakeLists.txt
+++ b/source/vsf_private/CMakeLists.txt
@@ -1,3 +1,8 @@
 # CMakeLists head
 
-# NULL
+target_include_directories(vsfkernel INTERFACE
+  .
+)
+
+add_subdirectory(component)
+add_subdirectory(hal)
