--- a/source/vsf/hal/arch/x86/CMakeLists.txt
+++ b/source/vsf/hal/arch/x86/CMakeLists.txt
@@ -1,3 +1,5 @@
 # CMakeLists head
 
-add_subdirectory(${VSFHAL_SYSTEM})
+if(IS_DIRECTORY ${VSFHAL_SYSTEM})
+  add_subdirectory(${VSFHAL_SYSTEM})
+endif()
