move gd32f3x0 drivers in vsf

--- a/source/vsf/hal/arch/CMakeLists.txt
+++ b/source/vsf/hal/arch/CMakeLists.txt
@@ -4,6 +4,4 @@ target_sources(vsfkernel INTERFACE
   vsf_arch_abstraction.c
 )
 
-if(IS_DIRECTORY ${VSFHAL_ARCH_SERIES})
-  add_subdirectory(${VSFHAL_ARCH_SERIES})
-endif()
+add_subdirectory_existed(${VSFHAL_ARCH_SERIES})
