--- a/source/vsf/hal/arch/x86/CMakeLists.txt
+++ b/source/vsf/hal/arch/x86/CMakeLists.txt
@@ -1,5 +1,3 @@
 # CMakeLists head
 
-if(IS_DIRECTORY ${VSFHAL_SYSTEM})
-  add_subdirectory(${VSFHAL_SYSTEM})
-endif()
+add_subdirectory_existed(${VSFHAL_SYSTEM})
