--- a/source/vsf/utilities/compiler/CMakeLists.txt
+++ b/source/vsf/utilities/compiler/CMakeLists.txt
@@ -1,6 +1,4 @@
 # CMakeLists head
 
 add_subdirectory(__common)
-if(IS_DIRECTORY ${VSFHAL_ARCH_SERIES})
-  add_subdirectory(${VSFHAL_ARCH_SERIES})
-endif()
+add_subdirectory_existed(${VSFHAL_ARCH_SERIES})
