--- a/source/vsf/hal/driver/CMakeLists.txt
+++ b/source/vsf/hal/driver/CMakeLists.txt
@@ -1,5 +1,3 @@
 # CMakeLists head
 
-if(IS_DIRECTORY ${VSFHAL_CHIP_VENDOR})
-  add_subdirectory(${VSFHAL_CHIP_VENDOR})
-endif()
+add_subdirectory_existed(${VSFHAL_CHIP_VENDOR})
