--- a/source/vsf/hal/driver/Nuvoton/CMakeLists.txt
+++ b/source/vsf/hal/driver/Nuvoton/CMakeLists.txt
@@ -1,6 +1,4 @@
 # CMakeLists head
 
-if(IS_DIRECTORY ${VSFHAL_CHIP_SERIES})
-  add_subdirectory(${VSFHAL_CHIP_SERIES})
-endif()
+add_subdirectory_existed(${VSFHAL_CHIP_SERIES})
 add_subdirectory(NuConsole)
