merger gd32f330 and gd32f350 driver

--- a/source/vsf/hal/driver/GigaDevice/GD32F3X0/CMakeLists.txt
+++ b/source/vsf/hal/driver/GigaDevice/GD32F3X0/CMakeLists.txt
@@ -1,4 +1,7 @@
 # CMakeLists head
 
+target_sources(vsfkernel INTERFACE
+    driver.c
+)
+
 add_subdirectory(common)
-add_subdirectory_existed(${VSFHAL_CHIP_NAME})
