--- a/source/vsf/hal/driver/GigaDevice/CMakeLists.txt
+++ b/source/vsf/hal/driver/GigaDevice/CMakeLists.txt
@@ -1,3 +1,5 @@
 # CMakeLists head
 
-add_subdirectory_existed(${VSFHAL_CHIP_SERIES})
+if(NOT IS_DIRECTORY ${VSF_BASE}/vsf_private/hal/driver/${VSFHAL_CHIP_VENDOR}/${VSFHAL_CHIP_SERIES})
+  add_subdirectory_existed(${VSFHAL_CHIP_SERIES})
+endif()
