--- a/source/projects/vllink_lite/CMakeLists.txt
+++ b/source/projects/vllink_lite/CMakeLists.txt
@@ -1,21 +1,24 @@
 # CMakeLists head
 
-# How to buiild:
-#   1. build in bin directory
-#       mkdir build
-#       cd build
-#       cmake -GNinja -S.. -B.
-#       ninja
-#       -> ninja clean
-#   2. build in source directory
-#       cmake -GNinja -S. -Bbuild
-#       cmake --build ./build
-#       ->rm -rf ./build or rm -r -fo ./build
-
 cmake_minimum_required(VERSION 3.13)
 
-# set VSF_BASE
-set(VSF_BASE ${CMAKE_CURRENT_LIST_DIR}/../.. CACHE PATH "VSF Base Directory")
+# How to buiild:
+#   1. Build Debug
+#     "cmake -GNinja -S. -Bbuild" or "cmake -GNinja -S. -Bbuild -DCMAKE_BUILD_TYPE=Debug"
+#     cmake --build ./build
+#     "rm -rf ./build" or "rm -r -fo ./build"
+#   2. Build Release
+#     "cmake -GNinja -S. -Bbuild -DCMAKE_BUILD_TYPE=Release"
+#     cmake --build ./build
+#     "rm -rf ./build" or "rm -r -fo ./build"
+
+# How to config chip:
+#   VSFHAL_CHIP_VENDOR -> chip vendor [arm, GigaDevice, Nuvoton, ST, TI, ...]
+#   VSFHAL_CHIP_SERIES -> chip series [GD32VF103, STM32F7X0, AM335X, ...]
+#   VSFHAL_CHIP_NAME -> chip full name [GD32VF103C8, STM32F730, AM3352, ...]
+#   VSFHAL_ARCH_SERIES -> chip arch series [arm, mcs51, rv, x86, ...]
+#   VSFHAL_ARCH_NAME -> chip arch name [cortex-m0, cortex-m0plus, cortex-m3, 
+#     cortex-m4, cortex-m7, cortex-m23, cortex-m33, cortex-r4, ...]
 
 # select chip and arch
 set(VSFHAL_CHIP_VENDOR      GigaDevice)
@@ -25,24 +28,45 @@ set(VSFHAL_ARCH_SERIES      arm)
 set(VSFHAL_ARCH_NAME        cortex-m4)
 
 set(PROJ_COMPILE_DEFINITIONS
-  __GigaDevice__
-  __GD32F350__
+  PROJ_CFG_VLLINK_LITE
+  BRD_CFG_VLLINK_LITE_R3
 )
 
+if(${VSFHAL_ARCH_SERIES} STREQUAL "arm")
+  #set(ARM_FLOATING_HARDWARE     "")
+  set(ARM_FLOATING_HARDWARE     -mfpu=fpv4-sp-d16)
+  #set(ARM_FLOATING_ABI          soft)
+  #set(ARM_FLOATING_ABI          softfp)
+  set(ARM_FLOATING_ABI          hard)
+endif()
+
+if (NOT CMAKE_BUILD_TYPE)
+    message(STATUS "No build type selected, default to Debug")
+    set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
+# set VSF_BASE
+set(VSF_BASE ${CMAKE_CURRENT_LIST_DIR}/../.. CACHE PATH "VSF Base Directory")
+
 # select toolchain
-include(${VSF_BASE}/cmake/gnuarmemb.cmake)
+if(${VSFHAL_ARCH_SERIES} STREQUAL "arm")
+  include(${VSF_BASE}/cmake/gnuarmemb.cmake)
+else()
+  message(FATAL_ERROR "Unknown ARCH: ${VSFHAL_ARCH_SERIES}")
+endif()
 
 # select toolchain
 include(${VSF_BASE}/cmake/extensions.cmake)
 
-project(vllink_lite C CXX ASM)
+get_filename_component(PROJ_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+project(${PROJ_NAME} C CXX ASM)
 
 #set(CONFIG_SHELL_LINUX    1)
 #message(STATUS "${PROJECT_SOURCE_DIR}")
 #message(STATUS "${PROJECT_BINARY_DIR}")
 
 set(SOURCE_FILES main.c)
-list(APPEND SOURCE_FILES usb_device.c)
+#list(APPEND SOURCE_FILES usb_device.c)
 
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
 
@@ -72,17 +96,21 @@ foreach(def ${PROJ_COMPILE_DEFINITIONS})
 endforeach()
 
 target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
-  LINKER:-T${CMAKE_CURRENT_SOURCE_DIR}/linker_script.ld
+  LINKER:-T${CMAKE_CURRENT_SOURCE_DIR}/gd32f350x8_booted.ld
   LINKER:-Map=output.map
 )
 
-target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
-  --specs=nosys.specs
-)
+#target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
+#
+#)
 
 set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
   SUFFIX ".elf"
 )
+
+# Enable lto
+set_property(TARGET ${CMAKE_PROJECT_NAME}
+ PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
 add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
   COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex
