--- a/source/vsf/hal/driver/GigaDevice/GD32F3X0/common/CMakeLists.txt
+++ b/source/vsf/hal/driver/GigaDevice/GD32F3X0/common/CMakeLists.txt
@@ -1,4 +1,11 @@
 # CMakeLists head
 
+target_sources(vsfkernel INTERFACE
+    __common.c
+)
+
+add_subdirectory(flash)
+add_subdirectory(io)
 add_subdirectory(startup)
+add_subdirectory(usart)
 add_subdirectory(usb)
