--- a/source/project_vllink_lite/vllink_lite_bootloader/cmake_vllinklite_gd32e103/CMakeLists.txt
+++ b/source/project_vllink_lite/vllink_lite_bootloader/cmake_vllinklite_gd32e103/CMakeLists.txt
@@ -86,7 +86,7 @@ target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC
 )
 
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE
-  vsfkernel
+  vsf
 )
 
 file(WRITE compile_definitions.h "// Auto Generate\n\n")
