--- a/source/vsf/hal/arch/CMakeLists.txt
+++ b/source/vsf/hal/arch/CMakeLists.txt
@@ -4,4 +4,4 @@ target_sources(vsf INTERFACE
     vsf_arch_abstraction.c
 )
 
-add_subdirectory(${VSF_HAL_ARCH_SERIES})
+add_subdirectory(${VSFHAL_ARCH_SERIES})
