--- a/source/vsf_private/hal/driver/GigaDevice/GD32E10X/CMakeLists.txt
+++ b/source/vsf_private/hal/driver/GigaDevice/GD32E10X/CMakeLists.txt
@@ -1,7 +1,10 @@
 # CMakeLists head
 
-target_sources(vsfkernel INTERFACE
+target_sources(vsf INTERFACE
     driver.c
+    jtag.c
+    swd.c
+    timestamp.c
 )
 
 add_subdirectory(common)
