--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CMakeLists head
 
-add_library(vsfkernel INTERFACE)
+add_library(vsf INTERFACE)
 
 add_subdirectory(vsf)
 add_subdirectory_existed(vsf_private)
